# Rust-Actix-Server

./: .env  .gitignore  127.0.0.1+1-key.pem  127.0.0.1+1.pem  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  diesel.toml  docker-compose.yml  log4rs.yaml  sonar-project.properties
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: dev.yml  rust.yml  tele.yml
config/: default.toml  development.toml
example/: map_reduce.rs
locales/: en.json  vn.json
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2021-04-26-063013_create_users/: up.sql
src/: config.rs  errors.rs  main.rs  settings.rs
src/actors/: mod.rs  nats_actor.rs  nats_client_actor.rs  redis_actor.rs  redis_client_actor.rs
src/controllers/: health_controller.rs  mod.rs  router.rs  routes.rs  users_controller.rs
src/core/: database.rs  event_store.rs  mod.rs  nats_server.rs
src/lib/: mod.rs  nats_broker.rs  redis_db.rs
src/middleware/: auth.rs  authenticate.rs  mod.rs  posRequest.rs  preRequest.rs  pre_request.rs  request_logger.rs
src/middlewares/: authenticate.rs  mod.rs  request_logger.rs
src/model/: mod.rs  nats_message.rs  response.rs  users.rs
src/model/constant/: mod.rs  status.rs
src/model/constants/: mod.rs  status.rs
src/model/database/: mod.rs  schema.rs  users.rs
src/model/domain/: language.rs  mod.rs  pagination.rs  pagination_result.rs  schema.rs  users.rs
src/model/domains/: users.rs
src/model/enumerate/: language.rs  logic_code.rs  mod.rs  response.rs  user_role.rs  user_status.rs
src/model/enumerates/: language.rs  user_role.rs  user_status.rs
src/model/nats/: message.rs  mod.rs
src/model/persistent/: language.rs  mod.rs  schema.rs  users.rs
src/model/request/: lib.rs  login_request.rs  mod.rs  page_request.rs  users_request.rs
src/model/request/user/: get_all_users.rs  mod.rs  register_request.rs  update_request.rs  users_request.rs
src/model/requests/: language_request.rs  mod.rs
src/model/requests/user/: mod.rs
src/model/response/: health_response.rs  login_response.rs  mod.rs  page_response.rs  page_result.rs  response.rs
src/model/responses/: health_response.rs  mod.rs  page_response.rs  response.rs
src/repositories/: users_repository.rs
src/repository/: users_repository.rs
src/services/: mod.rs  nats_client.rs  nats_consumer_service.rs  nats_server.rs  nats_service.rs  web_service.rs
src/services/client/: kafka_client_service.rs  mail_client_service.rs  mod.rs  nats_client_service.rs  postgres_client_service.rs  redis_client_service.rs  rest_client_service.rs
src/services/clients/: kafka_client_service.rs  mail_client_service.rs  mod.rs  nats_client_service.rs  postgres_client_service.rs  redis_client_service.rs  rest_client_service.rs
src/utils/: hasher.rs  mod.rs  project_profile.rs  translations.rs
