[package]
name = "backend_rust"
version = "0.1.0"
authors = ["thong.nguyen <thong.nguyen@mservice.com.vn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#lto = true
#opt-level = 3
#debug = false
#codegen-units = 1

#[profile.dev]
## Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
#debug = 0
#split-debuginfo = "unpacked"

[dependencies]
#framework
actix = "0.12"
actix-web = "4.0.0-beta.13"
actix-http = "3.0.0-beta.14"
awc = "3.0.0-beta.12"
#actix-files = "0.5"
actix-cors = "0.6.0-beta.4"
#actix-session = "0.4.1"
#actix-web-httpauth = "0.5"
#actix-web-grants = "2.2"

#ssl
openssl = { version = "0.10", features = ["v110"] }
listenfd = "0.3"
#Message broker
#nats clients
nats = "0.15"
#kafka clients
rdkafka = { version = "0.25", features = ["ssl", "sasl"] }

#Orm
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "numeric"] }
diesel_migrations = "1.4"
#Connection pool manager
r2d2 = "0.8"
#cache
redis = { version = "0.21", features = ["async-std-comp", "connection-manager"] }

#Serialize
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#Enumerate macro
strum = { version = "0.22", features = ["derive"] }
#Derive macro advance
derive_more = "0.99"
#capnp = "0.14.1"
#capnpc = "0.14.3"
#capnp-futures = "0.14.1"
#capnp-rpc = "0.14.1"
# json = "0.12"

#Thread, async, runtime
futures = "0.3"
tokio = { version = "1.14", features = ["full"] }
#Error customizer
thiserror = "1.0"
#pin-project = "1.0.7"

#mailer
lettre = "0.10.0-rc.3"

#validator
validator = { version = "0.14", features = ["phone"] }
validator_derive = { version = "0.14", features = ["phone"] }

#Global variable
once_cell = "1.5"
# url = "2.1"
#reqwest = "0.11"
#Configuration Mapper
envy = "0.4"
#Logger customizer
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
config = "0.11"

#rand = "0.8"
#Static sync variable
#lazy_static = "1.4"
#Uuid generator
uuid = { version = "1.0.0-alpha.1", features = ["serde", "fast-rng", "v4", "macro-diagnostics"] }
#Hasher
libreauth = "0.14"

#jwt = "*"

#Time library
chrono = { version = "0.4", features = ["serde"] }

#Metric
#metrics = "0.17"

itertools = "0.10.0"

#I18n
rosetta-i18n = "0.1"

[build-dependencies]
rosetta-build = "0.1"
