[package]
name = "backend_rust"
version = "0.1.0"
authors = ["thong.nguyen <thong.nguyen@mservice.com.vn>"]
description = "Rust Actix Web Application"
edition = "2018"
repository = "https://github.com/DianaSensei/Rust-Actix-Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#lto = true
#opt-level = 3
#debug = false
#codegen-units = 1

#[profile.dev]
## Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
#debug = 0
#split-debuginfo = "unpacked"
[features]
debug = []

[dependencies]
#framework
actix = "0.12"
actix-web = { version = "4.0.0-beta.18", features = ["rustls"] }
actix-http = "3.0.0-beta.17"
actix-service = "2.0.0-beta.5"
awc = "3.0.0-beta.17"
actix-files = "0.6.0-beta.12"
actix-cors = "0.6.0-beta.8"
#actix-session = "0.4.1"
#actix-web-httpauth = "0.5"
#actix-web-grants = "2.2"
#tls
rustls = "0.20"
rustls-pemfile = "0.2.1"

actix-web-opentelemetry = { version = "0.11.0-beta.7", features = ["metrics", "sync-middleware", "awc"] }
opentelemetry = { version = "0.16", features = ["trace", "metrics", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio-current-thread"] }
opentelemetry-prometheus = "0.9"
tracing = "0.1.29"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.16"
tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "registry", "env-filter", "local-time", "fmt", "ansi", "std"] }
tracing-bunyan-formatter = "0.3"

#ssl
#openssl = { version = "0.10.38", features = ["v110"] }
listenfd = "0.3"
#Message broker
#nats clients
nats = "0.16"
#kafka clients
rdkafka = { version = "0.28", features = ["ssl", "sasl"] }

#Orm
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "uuidv07", "numeric"] }
diesel_migrations = "1.4"
#Connection pool manager
r2d2 = "0.8"
#cache
redis = { version = "0.21", features = ["async-std-comp", "connection-manager"] }

#Serialize
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#Enumerate macro
strum = { version = "0.23", features = ["derive"] }
#Derive macro advance
derive_more = "0.99"
#capnp = "0.14.1"
#capnpc = "0.14.3"
#capnp-futures = "0.14.1"
#capnp-rpc = "0.14.1"
# json = "0.12"

#Thread, async, runtime
futures = "0.3"
tokio = { version = "1.14", features = ["full"] }
#Error customizer
thiserror = "1.0"
#pin-project = "1.0.7"

#mailer
lettre = "0.10.0-rc.3"

#validator
validator = { version = "0.14", features = ["phone"] }
validator_derive = { version = "0.14", features = ["phone"] }

#Global variable
once_cell = "1.5"
# url = "2.1"
#reqwest = "0.11"
#Configuration Mapper
#envy = "0.4"
#Logger customizer
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
config = "0.11"

#rand = "0.8"
#Static sync variable
#lazy_static = "1.4"
#Uuid generator
uuid = { version = "1.0.0-alpha.1", features = ["serde", "fast-rng", "v4", "macro-diagnostics"] }
#Hasher
libreauth = "0.14"

#jwt = "*"

#Time library
chrono = { version = "0.4.19", features = ["serde"] }

#Metric
#metrics = "0.17"

itertools = "0.10.0"

#I18n
rosetta-i18n = "0.1"

[build-dependencies]
rosetta-build = "0.1"
