[package]
name = "backend_rust"
version = "0.1.0"
authors = ["thong.nguyen <thong.nguyen@mservice.com.vn>"]
description = "Rust Actix Web Application"
edition = "2018"
repository = "https://github.com/DianaSensei/Rust-Actix-Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#lto = true
#opt-level = 3
#debug = false
#codegen-units = 1

#[profile.dev]
## Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
#debug = 0
#split-debuginfo = "unpacked"
[features]
debug = []

[dependencies]
#framework
actix = "0.12"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-http = "3.0.0"
actix-service = "2.0.2"
awc = "3.0.0-beta.21"
actix-files = "0.6.0"
actix-cors = "0.6.0"
#actix-session = "0.4.1"
#actix-web-httpauth = "0.5"
#actix-web-grants = "2.2"
#tls
rustls = "0.20.4"
rustls-pemfile = "1.0.1"

actix-web-opentelemetry = { version = "0.12.0", features = ["metrics", "sync-middleware", "awc"] }
opentelemetry = { version = "0.17.0", features = ["trace", "metrics", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
opentelemetry-prometheus = "0.10.0"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["smallvec", "registry", "env-filter", "local-time", "fmt", "ansi", "std", "tracing-log"] }
tracing-bunyan-formatter = "0.3.3"
#tracing-actix-web = { version = "0.6.0", default-features = false, features = [ "opentelemetry_0_17"]}
#tracing-awc = { version = "0.1.5", default-features = false, features = ["opentelemetry_0_17"]}

#ssl
#openssl = { version = "0.10.38", features = ["v110"] }
listenfd = "1.0.0"
#Message broker
#nats clients
nats = "0.23.0"
#kafka clients
rdkafka = { version = "0.28", features = ["ssl", "sasl"] }

#Orm
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "uuidv07", "numeric"] }
diesel_migrations = "1.4"
#Connection pool manager
r2d2 = "0.8.9"
#cache
redis = { version = "0.21.5", features = ["async-std-comp", "connection-manager"] }

ansi_term = "0.12.1"
#Serialize
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#Enumerate macro
strum = { version = "0.24", features = ["derive"] }
#Derive macro advance
derive_more = "0.99"
#capnp = "0.14.1"
#capnpc = "0.14.3"
#capnp-futures = "0.14.1"
#capnp-rpc = "0.14.1"
# json = "0.12"

#Thread, async, runtime
futures = "0.3"
tokio = { version = "1.17", features = ["full"] }
#Error customizer
thiserror = "1.0"
#pin-project = "1.0.7"

#mailer
lettre = "0.10.0-rc.4"

#validator
validator = { version = "0.16.0", features = ["phone"] }
validator_derive = { version = "0.16.0", features = ["phone"] }

#Global variable
once_cell = "1.9"
# url = "2.1"
#reqwest = "0.11"
#Configuration Mapper
#envy = "0.4"
#Logger customizer
log = "0.4"
dotenv = "0.15"
#env_logger = "0.9"
config = "0.13.2"

#rand = "0.8"
#Static sync variable
#lazy_static = "1.4"
#Uuid generator
uuid = { version = "1.0.0-alpha.1", features = ["serde", "fast-rng", "v4", "macro-diagnostics"] }
#Hasher
libreauth = "0.14"

#jwt = "*"

#Time library
chrono = { version = "0.4.19", features = ["serde"] }

#Metric
#metrics = "0.17"

itertools = "0.10.3"

#I18n
rosetta-i18n = "0.1.2"

[build-dependencies]
rosetta-build = "0.1.2"
